<resources>
    <string name="app_name" translatable="false">Monet Collector</string>
    <string name="developed_by">Developed by Josinaldo C Fontes</string>
    <string name="version" translatable="false">1.0.0</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_home" translatable="false">Monet</string>

    <string name="hint_email">Email</string>
    <string name="hint_name">Name</string>
    <string name="hint_password">Password</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_remember_me">Save login and password</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="btn_link_to_register">Not a member? Get registered now!</string>
    <string name="btn_back_to_login">Back to login...</string>

    <string name="navigation_filter">Type here...</string>

    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_up_short">Create Account</string>
    <string name="error_invalid_email">Enter a valid email address</string>
    <string name="error_invalid_password">Enter a valid password</string>
    <string name="error_auth_failed">Authentication failed</string>
    <string name="error_invalid_access">Invalid access</string>
    <string name="error_not_connected">There is no connection to internet</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_at_least_3">At least 3 characters</string>
    <string name="error_between_4_and_10">Between 4 and 10 alphanumeric characters</string>
    <string name="alert_loading">Loading...</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>

    <!--ADD CATEGORY-->
    <string name="category_title">Categories</string>
    <string name="category_title_add">Add Category</string>
    <string name="category_name">Name</string>
    <string name="category_description">Description</string>
    <string name="category_name_required">Name is required</string>
    <string name="category_desc_required">Description is required</string>
    <string name="category_deleted">Category deleted!</string>

    <!--ADD ITEM-->
    <string name="item_title">Items</string>
    <string name="item_title_add_item">Add Item</string>
    <string name="item_name">Name</string>
    <string name="item_description">Description</string>
    <string name="item_name_required">Name is required</string>
    <string name="item_desc_required">Description is required</string>
    <string name="menu_home">Home</string>
    <string name="menu_about">About</string>
    <string name="menu_category">Categories</string>
    <string name="menu_logout">Exit</string>

    <string name="btn_reset_password">Reset Password</string>
    <string name="error_reset_password">Failed to send reset email!</string>
    <string name="msg_reset_password">We have sent you instructions to reset your password!</string>
    <string name="msg_forgot_password">We just need your registered mail to send you a reset password mail.</string>

</resources>
